Fix vertical align

--- a/src/scss/partials/simple-theme-ladrupalera-body.scss
+++ b/src/scss/partials/simple-theme-ladrupalera-body.scss
@@ -217,6 +217,6 @@ img.icon-credentials-credentials{
   }
 }
 
-#jenkins .task-links{
-  vertical-align: middle;
+#jenkins .task-link{
+  vertical-align: text-top;
 }
